# hist-aware

./: .gitignore  README.md  Untitled.ipynb  histaware.log.2020-09-21  histaware.log.2020-10-06  histaware.log.2020-10-07  histaware.log.2020-10-09  pyproject.toml  requirements.txt  test_kb_API.ipynb  to_label_final.csv
bert-pre-training/: Pipfile
bert-pre-training/config/: config.py
bert-pre-training/pretraining/: KB-run-pretraining-google.sh  create-pretrain-data.py  create-tokenizer-hf.py
data/processed/: processed_metadata_0_100.ftr  processed_metadata_0_1000.ftr
data/processed/processed_metadata/: processed_metadata_0_1000.csv  processed_metadata_1000_2000.csv  processed_metadata_1000_2000.ftr  (+4 more)
delphbert/: README.md
delphbert/config/: bert_config.json
delphbert/pretraining/: KB-prepare-newspapers.py  create-pretrain-data-test.py  create-vocab.py  shuffle-pretraining-data.py
notebooks/: 0_pipeline_text_selection.ipynb  1_text_selection.ipynb  2_hyperparameter_training.ipynb  2_sentiment_analysis.ipynb  BERT_create_dataset_and_training.ipynb  BERT_manual_training.ipynb  BERT_process_labeled_data.ipynb  DATA_process_selected_data.ipynb  DATA_split_complete_labeled.ipynb  Test.ipynb  Untitled.ipynb  asreview_result_test.xlsx  create_dataset.ipynb  dataset_train.ipynb  dictionary.cor  embeddings.pkl  gas.1990.train  gas.1990.valid  histaware.log.2020-10-09  histaware.log.2020-10-15  merge.csv  model.gas.1990  ocr_correction.ipynb  ocr_correction_gensim.ipynb  ocr_correction_transformer.ipynb  plotting_data.ipynb  preprocess.ipynb  process_labeled.ipynb  roos_similarity.ipynb  semantic_search.ipynb  sentiment-analysis.ipynb  sentiment_BERT_ootb.ipynb  sentiment_analysis_BERT.ipynb  sentiment_nb.ipynb  similarity_fasttext.ipynb  similarity_nb_tfidf.ipynb  test_df  test_df.csv  text-selection.ipynb  text_selection.py  (+2 more)
notebooks/backups/: 0_text_selection_backup-prelist.ipynb  similarity_fasttext.ipynb
notebooks/backups-notebooks/: 1_text_selection_p_inverted.ipynb  topic_modeling.ipynb
notebooks/data-processing/: DATA_analyses_lables.ipynb  DATA_merge_labeled_kappascoring.ipynb  DATA_process_labeled_data.ipynb  DATA_split_complete_labeled.ipynb  DATA_split_merged.ipynb  DATA_unite_divided_labeled.ipynb  Untitled.ipynb  text_cleaner.py  words_frequency.ipynb
notebooks/logging/: events.out.tfevents.1623397955.rsc-instance.17111.0  events.out.tfevents.1623403856.rsc-instance.17111.2  events.out.tfevents.1623404376.rsc-instance.21532.0  events.out.tfevents.1623404520.rsc-instance.21532.2  events.out.tfevents.1623411684.rsc-instance.24893.0  events.out.tfevents.1623411781.rsc-instance.24931.0  events.out.tfevents.1623412324.rsc-instance.25234.0  events.out.tfevents.1623658487.rsc-instance.5713.0  events.out.tfevents.1623658759.rsc-instance.5957.0  events.out.tfevents.1623658842.rsc-instance.6030.0  events.out.tfevents.1623659004.rsc-instance.6030.2
notebooks/sentiment/: edo_1980s_coal.csv  edo_1980s_oil.csv  edo_1990s_gas_labeled.csv  fasttext.df.train  fasttext.df.valid  result.csv
notebooks/wandb/: latest-run
src/: article_selection.py  cli.py  example.py  histaware.py  iterators.py  keywords.py  logger.py  nlp_pipeline.py  parsers.py  pipeline_semantic_search.py  pipeline_semantic_search_hnswlib.py  pipeline_text_selection.py  preprocess.py  preprocess_2.py  text_search.py  text_selection.py  tfidf.py
src/core/: config.py
src/models/: tfidf.py
src/old/: pipeline_semantic_search_hnswlib.py  preprocess_list.py
src/utils/: iterators.py  parsers.py  tokenizer.py  utils.py
(+240 files in other folders)
